--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -11,44 +11,67 @@ img {
   height: auto;
 }
 .container {
-  width: 1200px;
+  width: 480px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
   margin-right: auto;
 }
+// .container {
+//   width: 1200px;
+//   padding-left: 15px;
+//   padding-right: 15px;
+//   margin-left: auto;
+//   margin-right: auto;
+// }
+
 .section {
-  padding-top: 94px;
-  padding-bottom: 94px;
+  padding-top: 60px;
+  padding-bottom: 60px;
 
   &__heading {
-    margin-bottom: 50px;
+    margin-bottom: 30px;
     color: $color-text-topic;
     font-weight: 700;
-    font-size: 36px;
-    line-height: calc(42 / 36);
+    font-size: 28px;
+    line-height: calc(33 / 28);
     text-align: center;
   }
 }
-.grid {
-  display: flex;
-  flex-wrap: wrap;
-  gap: 30px;
 
-  &__item--advantage {
-    width: 270px;
-  }
-  &__item--work {
-    width: 370px;
-  }
-  &__item--team {
-    width: 270px;
-  }
-  &__item--client {
-    width: 170px;
-    height: 92px;
-  }
-  &__item--project {
-    width: 370px;
-  }
-}
+// .section {
+//   padding-top: 94px;
+//   padding-bottom: 94px;
+
+//   &__heading {
+//     margin-bottom: 50px;
+//     color: $color-text-topic;
+//     font-weight: 700;
+//     font-size: 36px;
+//     line-height: calc(42 / 36);
+//     text-align: center;
+//   }
+// }
+
+// .grid {
+//   display: flex;
+//   flex-wrap: wrap;
+//   gap: 30px;
+
+//   &__item--advantage {
+//     width: 270px;
+//   }
+//   &__item--work {
+//     width: 370px;
+//   }
+//   &__item--team {
+//     width: 270px;
+//   }
+//   &__item--client {
+//     width: 170px;
+//     height: 92px;
+//   }
+//   &__item--project {
+//     width: 370px;
+//   }
+// }
