--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -15,7 +15,7 @@
   cursor: pointer;
 
   &--hero {
-    padding: 10px 32px;
+    padding: 10px 24px;
     margin-left: auto;
     margin-right: auto;
   }
@@ -82,3 +82,87 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
+// .button {
+//   display: block;
+
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   background-color: $background-color-bt-accent;
+//   color: $color-text-hero;
+//   font-weight: 700;
+//   font-size: 16px;
+//   line-height: calc(30 / 16);
+//   letter-spacing: 0.06em;
+//   box-shadow: 0px 4px 4px $background-color-shadow;
+//   border-radius: 4px;
+//   border: none;
+//   cursor: pointer;
+
+//   &--hero {
+//     padding: 10px 32px;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+//   &--ftr {
+//     display: inline-flex;
+//     align-items: center;
+//     padding: 10px 28px;
+//   }
+//   &--form {
+//     display: flex;
+//     align-items: center;
+//     text-align: center;
+//     padding: 10px 52px;
+//     margin-left: auto;
+//     margin-right: auto;
+//   }
+//   &:hover,
+//   &:focus {
+//     background-color: $background-color-bt-activ;
+//   }
+// }
+
+// .button--close {
+//   position: absolute;
+//   top: 8px;
+//   right: 8px;
+
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   padding: 10px;
+//   line-height: 0;
+//   background-color: $background-color-main;
+//   border-radius: 50%;
+//   border: 1px solid $background-color-backdrop;
+//   cursor: pointer;
+
+//   &:focus,
+//   &:hover {
+//     border-color: $background-color-bt-accent;
+//     fill: $background-color-bt-accent;
+//   }
+// }
+// .button--filter {
+//   padding: 6px 22px;
+
+//   transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+//     color 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   background-color: $background-color-bt;
+//   color: $color-text-topic;
+//   font-weight: 500;
+//   font-size: 16px;
+//   line-height: calc(26 / 16);
+//   text-align: center;
+//   border-radius: 4px;
+//   border: none;
+//   cursor: pointer;
+
+//   &:hover,
+//   &:focus {
+//     background-color: $background-color-bt-accent;
+//     color: $color-text-hero;
+//     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+//       0px 2px 2px rgba(0, 0, 0, 0.12);
+//   }
+// }
