--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -1,9 +1,15 @@
 .header {
   border-bottom: 1px solid $background-color-line;
-
   &__container {
-    display: flex;
-    align-items: center;
-    justify-content: space-between;
+    padding: 16px 10px 16px 15px;
   }
 }
+// .header {
+//   border-bottom: 1px solid $background-color-line;
+
+//   &__container {
+//     display: flex;
+//     align-items: center;
+//     justify-content: space-between;
+//   }
+// }
