--- a/sass/components/_section-advantage.scss
+++ b/sass/components/_section-advantage.scss
@@ -19,6 +19,7 @@
     font-weight: 700;
     line-height: calc(16 / 14);
     text-transform: uppercase;
+    text-align: center;
   }
 
   &__text {
@@ -27,4 +28,40 @@
     line-height: (24px / 14px);
     letter-spacing: 0.03em;
   }
+  &__item {
+    margin-bottom: 30px;
+    &:last-child {
+      margin-bottom: 0;
+    }
+  }
 }
+// .advantage {
+//   &__card {
+//     display: flex;
+//     justify-content: center;
+//     align-items: center;
+//     width: 100%;
+//     height: 120px;
+//     margin-bottom: 30px;
+
+//     background-color: $background-color-sect;
+//     border-radius: 4px;
+//   }
+
+//   &__title {
+//     margin-bottom: 10px;
+
+//     color: $color-text-topic;
+//     font-size: 14px;
+//     font-weight: 700;
+//     line-height: calc(16 / 14);
+//     text-transform: uppercase;
+//   }
+
+//   &__text {
+//     font-weight: 400;
+//     font-size: 14px;
+//     line-height: (24px / 14px);
+//     letter-spacing: 0.03em;
+//   }
+// }
