--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -11,7 +11,7 @@ img {
   height: auto;
 }
 .container {
-  width: 480px;
+  max-width: 480px;
   padding-left: 15px;
   padding-right: 15px;
   margin-left: auto;
