--- a/sass/components/_address.scss
+++ b/sass/components/_address.scss
@@ -1,8 +1,12 @@
 .address {
   margin-top: 20px;
-
+  &__list {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
   &__item {
-    margin-bottom: 9px;
+    margin-bottom: 8px;
 
     &:last-child {
       margin-bottom: 0;
@@ -16,6 +20,7 @@
   font-style: normal;
   line-height: calc(24 / 14);
   color: $color-text-hero;
+  text-align: center;
 
   &--contact {
     color: $color-text-adress;
@@ -25,3 +30,31 @@
     color: $color-text-accent;
   }
 }
+
+// .address {
+//   margin-top: 20px;
+
+//   &__item {
+//     margin-bottom: 9px;
+
+//     &:last-child {
+//       margin-bottom: 0;
+//     }
+//   }
+// }
+// .address__link {
+//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+//   text-decoration: none;
+//   font-style: normal;
+//   line-height: calc(24 / 14);
+//   color: $color-text-hero;
+
+//   &--contact {
+//     color: $color-text-adress;
+//   }
+//   &:hover,
+//   &:focus {
+//     color: $color-text-accent;
+//   }
+// }
