--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,6 +4,7 @@
 @import './components/base';
 @import './components/button';
 @import './components/icon';
+@import './components/menu-mobile';
 @import './components/logo';
 @import './components/page-header';
 @import './components/page-footer';
