--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -58,6 +58,25 @@
     fill: $background-color-bt-accent;
   }
 }
+.button--close-menu {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  padding: 10px;
+  line-height: 0;
+  background-color: $background-color-main;
+  border-radius: 50%;
+  border: none;
+  cursor: pointer;
+
+  &:focus,
+  &:hover {
+    fill: $background-color-bt-accent;
+  }
+}
 .button--filter {
   padding: 6px 22px;
 
@@ -78,6 +97,34 @@
   &:focus {
     background-color: $background-color-bt-accent;
     color: $color-text-hero;
+    box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
+      0px 2px 2px rgba(0, 0, 0, 0.12);
+  }
+}
+.button--menu {
+  position: absolute;
+  top: 10px;
+  right: 15px;
+
+  min-height: 40px;
+  min-width: 40px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  margin: 0;
+  padding: 0;
+
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1), box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  background-color: $background-color-main;
+  fill: $color-text-dark;
+  border: none;
+  cursor: pointer;
+  outline: none;
+
+  &:hover,
+  &:focus {
+    fill: $background-color-bt-accent;
     box-shadow: 0px 3px 1px rgba(0, 0, 0, 0.1), 0px 1px 2px rgba(0, 0, 0, 0.08),
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
