--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,7 +1,49 @@
+// Mobile style
 .nav {
   &__list {
-    display: none;
+    &--contact {
+      margin-top: 302px;
+    }
   }
+  &__item {
+    margin-bottom: 32px;
+
+    &:last-child {
+      margin-bottom: 0px;
+    }
+  }
+}
+.nav__link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  text-decoration: none;
+  color: $color-text-topic;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: calc(47 / 40);
+  letter-spacing: 0.02em;
+
+  &:hover,
+  &:focus {
+    color: $color-text-accent;
+  }
+  &--contact {
+    color: $color-text-accent;
+    font-size: 32px;
+    line-height: calc(40 / 32);
+    letter-spacing: 0.02em;
+  }
+  &--contact-tel {
+    color: $color-text-main;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: calc(28 / 24);
+    letter-spacing: 0.02em;
+  }
+}
+.nav__link--active {
+  color: $color-text-accent;
+  padding-bottom: 0;
 }
 
 // .nav {
