--- a/sass/components/_icon.scss
+++ b/sass/components/_icon.scss
@@ -5,19 +5,6 @@
 .icon--envelope {
   display: none;
 }
-
-// .icon--envelope {
-//   width: 16px;
-//   height: 12px;
-//   margin-right: 10px;
-//   fill: currentColor;
-// }
-// .icon--smartphone {
-//   width: 10px;
-//   height: 16px;
-//   margin-right: 10px;
-//   fill: currentColor;
-// }
 .icon--send {
   width: 24px;
   height: 24px;
@@ -55,4 +42,19 @@
   width: 40px;
   height: 40px;
   letter-spacing: 0;
+}
+// tablet stule
+@media screen and (min-width: 768px) {
+  .icon--envelope {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+    fill: currentColor;
+  }
+  .icon--smartphone {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+    fill: currentColor;
+  }
 }
