--- a/css/main.css
+++ b/css/main.css
@@ -67,6 +67,66 @@ img {
   text-align: center;
 }
 
+@media screen and (min-width: 768px) {
+  .container {
+    max-width: 768px;
+  }
+  .grid {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    gap: 30px;
+  }
+  .grid__item--advantage {
+    width: 354px;
+  }
+  .grid__item--work {
+    width: 354px;
+  }
+  .grid__item--team {
+    width: 354px;
+  }
+  .grid__item--client {
+    width: 266px;
+    height: 92px;
+  }
+  .grid__item--project {
+    width: 354px;
+  }
+}
+@media screen and (min-width: 1200px) {
+  .container {
+    max-width: 1200px;
+  }
+  .section {
+    padding-top: 94px;
+    padding-bottom: 94px;
+  }
+  .section__heading {
+    margin-bottom: 50px;
+    font-size: 36px;
+    line-height: 1.1666666667;
+    text-align: center;
+  }
+  .grid__item--advantage {
+    width: 270px;
+  }
+  .grid__item--work {
+    width: 370px;
+  }
+  .grid__item--team {
+    width: 270px;
+  }
+  .grid__item--client {
+    width: 170px;
+    height: 92px;
+  }
+  .grid__item--project {
+    width: 370px;
+  }
+}
 .button {
   display: block;
   -webkit-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -257,15 +317,36 @@ img {
   letter-spacing: 0;
 }
 
+@media screen and (min-width: 768px) {
+  .icon--envelope {
+    width: 16px;
+    height: 12px;
+    margin-right: 10px;
+    fill: currentColor;
+  }
+  .icon--smartphone {
+    width: 10px;
+    height: 16px;
+    margin-right: 10px;
+    fill: currentColor;
+  }
+}
 .menu-container {
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
   padding: 48px 40px;
   background-color: #ffffff;
-  z-index: 999;
   -webkit-transform: translateX(100%);
           transform: translateX(100%);
   -webkit-transition: -webkit-transform 250ms ease-in-out;
@@ -273,7 +354,6 @@ img {
   transition: transform 250ms ease-in-out;
   transition: transform 250ms ease-in-out, -webkit-transform 250ms ease-in-out;
 }
-
 .menu-container.is-open {
   -webkit-transform: translateX(0);
           transform: translateX(0);
@@ -333,6 +413,21 @@ img {
 }
 .header__container {
   padding: 16px 10px 16px 15px;
+}
+
+.header {
+  border-bottom: 1px solid #ececec;
+}
+.header__container {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
 }
 
 .footer {
@@ -412,6 +507,7 @@ img {
           align-items: center;
 }
 .form-ftr__input {
+  display: block;
   padding: 15px 16px;
   margin-bottom: 20px;
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -462,7 +558,7 @@ img {
 }
 
 .nav__list--contact {
-  margin-top: 302px;
+  margin-top: auto;
 }
 .nav__item {
   margin-bottom: 32px;
