--- a/sass/components/_button.scss
+++ b/sass/components/_button.scss
@@ -129,6 +129,13 @@
       0px 2px 2px rgba(0, 0, 0, 0.12);
   }
 }
+// tablet style
+@media screen and (min-width: 768px) {
+  .button--menu {
+    display: none;
+  }
+}
+
 // .button {
 //   display: block;
 
