--- a/sass/components/_menu-mobile.scss
+++ b/sass/components/_menu-mobile.scss
@@ -2,18 +2,21 @@
   position: fixed;
   top: 0;
   left: 0;
-  width: 100vw;
-  height: 100vh;
+  width: 100%;
+  height: 100%;
+  z-index: 999;
+
+  display: flex;
+  flex-direction: column;
+
   padding: 48px 40px;
   background-color: $background-color-main;
-  z-index: 999;
 
   transform: translateX(100%);
   transition: transform 250ms ease-in-out;
-}
-
-.menu-container.is-open {
-  transform: translateX(0);
+  &.is-open {
+    transform: translateX(0);
+  }
 }
 
 .menu-container .menu-toggle {
@@ -24,6 +27,18 @@
 }
 
 .menu {
+  &__list {
+    &--contact {
+      margin-top: auto;
+    }
+  }
+  &__item {
+    margin-bottom: 32px;
+
+    &:last-child {
+      margin-bottom: 0px;
+    }
+  }
   &--social {
     margin-top: 64px;
     display: flex;
@@ -34,7 +49,7 @@
       border-right: none;
     }
   }
-  &__link {
+  &__link--social {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     text-decoration: none;
@@ -45,5 +60,44 @@
     letter-spacing: 0.02em;
     padding-right: 10px;
     padding-left: 10px;
+  }
+}
+.menu__link {
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  text-decoration: none;
+  color: $color-text-topic;
+  font-weight: 500;
+  font-size: 40px;
+  line-height: calc(47 / 40);
+  letter-spacing: 0.02em;
+
+  &:hover,
+  &:focus {
+    color: $color-text-accent;
+  }
+  &--contact {
+    color: $color-text-accent;
+    font-size: 32px;
+    line-height: calc(40 / 32);
+    letter-spacing: 0.02em;
+  }
+  &--contact-tel {
+    color: $color-text-main;
+    font-weight: 500;
+    font-size: 24px;
+    line-height: calc(28 / 24);
+    letter-spacing: 0.02em;
+  }
+  &--active {
+    color: $color-text-accent;
+    padding-bottom: 0;
+  }
+}
+
+// tablet style
+@media screen and (min-width: 768px) {
+  .menu-container {
+    display: none;
   }
 }
