--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -1,80 +1,26 @@
-// Mobile style
-.nav {
-  &__list {
-    &--contact {
-      margin-top: 302px;
-    }
-  }
-  &__item {
-    margin-bottom: 32px;
-
-    &:last-child {
-      margin-bottom: 0px;
-    }
-  }
-}
-.nav__link {
-  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-  text-decoration: none;
-  color: $color-text-topic;
-  font-weight: 500;
-  font-size: 40px;
-  line-height: calc(47 / 40);
-  letter-spacing: 0.02em;
-
-  &:hover,
-  &:focus {
-    color: $color-text-accent;
-  }
-  &--contact {
-    color: $color-text-accent;
-    font-size: 32px;
-    line-height: calc(40 / 32);
-    letter-spacing: 0.02em;
-  }
-  &--contact-tel {
-    color: $color-text-main;
-    font-weight: 500;
-    font-size: 24px;
-    line-height: calc(28 / 24);
-    letter-spacing: 0.02em;
-  }
-}
-.nav__link--active {
-  color: $color-text-accent;
-  padding-bottom: 0;
-}
-
+// // Mobile style
 // .nav {
-//   display: flex;
-//   align-items: center;
-
 //   &__list {
-//     display: flex;
+//     &--contact {
+//       margin-top: auto;
+//     }
 //   }
 //   &__item {
-//     margin-right: 50px;
+//     margin-bottom: 32px;
 
 //     &:last-child {
-//       margin-right: 0;
+//       margin-bottom: 0px;
 //     }
 //   }
 // }
 // .nav__link {
-//   display: flex;
-//   flex-direction: column;
-//   align-items: center;
-//   flex-wrap: nowrap;
-//   padding-top: 32px;
-//   padding-bottom: 32px;
-
 //   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
 //   text-decoration: none;
 //   color: $color-text-topic;
 //   font-weight: 500;
-//   line-height: calc(16 / 14);
+//   font-size: 40px;
+//   line-height: calc(47 / 40);
 //   letter-spacing: 0.02em;
 
 //   &:hover,
@@ -82,21 +28,82 @@
 //     color: $color-text-accent;
 //   }
 //   &--contact {
-//     flex-direction: row;
+//     color: $color-text-accent;
+//     font-size: 32px;
+//     line-height: calc(40 / 32);
+//     letter-spacing: 0.02em;
+//   }
+//   &--contact-tel {
 //     color: $color-text-main;
+//     font-weight: 500;
+//     font-size: 24px;
+//     line-height: calc(28 / 24);
+//     letter-spacing: 0.02em;
 //   }
 // }
 // .nav__link--active {
 //   color: $color-text-accent;
 //   padding-bottom: 0;
-
-//   &::after {
-//     content: '';
-//     width: 106%;
-//     height: 4px;
-//     border-radius: 2px;
-//     background-color: $background-color-bt-accent;
-//     background-size: contain;
-//     margin-top: 28px;
-//   }
 // }
+
+// tablet style
+@media screen and (min-width: 768px) {
+}
+
+// decstop style
+@media screen and (min-width: 1200px) {
+  .nav {
+    display: flex;
+    align-items: center;
+
+    &__list {
+      display: flex;
+    }
+    &__item {
+      margin-right: 50px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+  }
+  .nav__link {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    flex-wrap: nowrap;
+    padding-top: 32px;
+    padding-bottom: 32px;
+
+    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+    text-decoration: none;
+    color: $color-text-topic;
+    font-weight: 500;
+    line-height: calc(16 / 14);
+    letter-spacing: 0.02em;
+
+    &:hover,
+    &:focus {
+      color: $color-text-accent;
+    }
+    &--contact {
+      flex-direction: row;
+      color: $color-text-main;
+    }
+  }
+  .nav__link--active {
+    color: $color-text-accent;
+    padding-bottom: 0;
+
+    &::after {
+      content: '';
+      width: 106%;
+      height: 4px;
+      border-radius: 2px;
+      background-color: $background-color-bt-accent;
+      background-size: contain;
+      margin-top: 28px;
+    }
+  }
+}
