--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -5,6 +5,16 @@
     padding: 16px 10px 16px 15px;
   }
 }
+// tablet style
+@media screen and (min-width: 768px) {
+.header {
+  &__container {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+  }
+// decstop stule
 // .header {
 //   border-bottom: 1px solid $background-color-line;
 
