--- a/sass/components/_page-header.scss
+++ b/sass/components/_page-header.scss
@@ -14,7 +14,7 @@
     justify-content: space-between;
   }
   }
-// decstop stule
+// desktop stule
 // .header {
 //   border-bottom: 1px solid $background-color-line;
 
