--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -60,7 +60,7 @@ img {
     }
   }
 }
-// decstop style
+// desktop style
 @media screen and (min-width: 1200px) {
   .container {
     max-width: 1200px;
