--- a/sass/main.scss
+++ b/sass/main.scss
@@ -3,12 +3,12 @@
 @import './utils/visually-hidden'; //ok
 @import './components/base'; //ok
 @import './components/button'; //ok
-@import './components/icon';
-// @import './components/menu-mobile';
+@import './components/icon'; //ok
+@import './components/menu-mobile';
 @import './components/logo'; //ok
-@import './components/page-header'; //50%
+@import './components/page-header'; //ok
 // @import './components/page-footer';
-@import './components/nav';
+@import './components/nav'; //ok
 // @import './components/address';
 // @import './components/modal';
 // @import './components/section-hero';
