--- a/sass/components/_nav.scss
+++ b/sass/components/_nav.scss
@@ -4,64 +4,87 @@
     display: none;
   }
 }
-
-//     &--contact {
-//       margin-top: auto;
-//     }
-//   }
-//   &__item {
-//     margin-bottom: 32px;
-
-//     &:last-child {
-//       margin-bottom: 0px;
-//     }
-//   }
-// }
-// .nav__link {
-//   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-//   text-decoration: none;
-//   color: $color-text-topic;
-//   font-weight: 500;
-//   font-size: 40px;
-//   line-height: calc(47 / 40);
-//   letter-spacing: 0.02em;
-
-//   &:hover,
-//   &:focus {
-//     color: $color-text-accent;
-//   }
-//   &--contact {
-//     color: $color-text-accent;
-//     font-size: 32px;
-//     line-height: calc(40 / 32);
-//     letter-spacing: 0.02em;
-//   }
-//   &--contact-tel {
-//     color: $color-text-main;
-//     font-weight: 500;
-//     font-size: 24px;
-//     line-height: calc(28 / 24);
-//     letter-spacing: 0.02em;
-//   }
-// }
-// .nav__link--active {
-//   color: $color-text-accent;
-//   padding-bottom: 0;
-// }
-
-// tablet style
-// @media screen and (min-width: 768px) {
-// }
-
-// decstop style
-@media screen and (min-width: 1200px) {
+// tablet stule
+@media screen and (min-width: 768px) {
   .nav {
     display: flex;
     align-items: center;
 
     &__list {
       display: flex;
+      margin-left: 87px;
+    }
+    &__list--contact {
+      display: flex;
+      flex-direction: column;
+    }
+    &__item {
+      margin-right: 51px;
+
+      &:last-child {
+        margin-right: 0;
+      }
+    }
+    &__item--contact {
+      margin: 0px;
+    }
+  }
+}
+.nav__link {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  flex-wrap: nowrap;
+  padding-top: 32px;
+  padding-bottom: 32px;
+
+  transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+
+  text-decoration: none;
+  color: $color-text-topic;
+  font-weight: 500;
+  line-height: calc(16 / 14);
+  letter-spacing: 0.02em;
+
+  &:hover,
+  &:focus {
+    color: $color-text-accent;
+  }
+  &--contact {
+    flex-direction: row;
+    color: $color-text-main;
+    padding: 0;
+    margin-bottom: 10px;
+    font-size: 12px;
+    line-height: calc(14 / 12);
+
+    &:last-child {
+      margin-right: 0;
+    }
+  }
+}
+.nav__link--active {
+  color: $color-text-accent;
+  padding-bottom: 0;
+
+  &::after {
+    content: '';
+    width: 106%;
+    height: 4px;
+    border-radius: 2px;
+    background-color: $background-color-bt-accent;
+    background-size: contain;
+    margin-top: 28px;
+  }
+}
+
+// desktop style
+@media screen and (min-width: 1200px) {
+  .nav {
+    &__list {
+      display: flex;
+      flex-direction: row;
+      margin-left: 0;
     }
     &__item {
       margin-right: 50px;
@@ -72,42 +95,14 @@
     }
   }
   .nav__link {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    flex-wrap: nowrap;
-    padding-top: 32px;
-    padding-bottom: 32px;
-
-    transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    text-decoration: none;
-    color: $color-text-topic;
-    font-weight: 500;
-    line-height: calc(16 / 14);
-    letter-spacing: 0.02em;
-
-    &:hover,
-    &:focus {
-      color: $color-text-accent;
-    }
     &--contact {
       flex-direction: row;
       color: $color-text-main;
-    }
-  }
-  .nav__link--active {
-    color: $color-text-accent;
-    padding-bottom: 0;
-
-    &::after {
-      content: '';
-      width: 106%;
-      height: 4px;
-      border-radius: 2px;
-      background-color: $background-color-bt-accent;
-      background-size: contain;
-      margin-top: 28px;
+      font-size: 14px;
+      line-height: calc(16 / 14);
+      margin-bottom: 0;
+      padding-top: 32px;
+      padding-bottom: 32px;
     }
   }
 }
