modal style adaptive

--- a/sass/main.scss
+++ b/sass/main.scss
@@ -4,13 +4,13 @@
 @import './components/base'; //ok
 @import './components/button'; //ok
 @import './components/icon'; //ok
-@import './components/menu-mobile';
+@import './components/menu-mobile'; //ok
 @import './components/logo'; //ok
 @import './components/page-header'; //ok
 // @import './components/page-footer';
 @import './components/nav'; //ok
 // @import './components/address';
-// @import './components/modal';
+@import './components/modal';
 // @import './components/section-hero';
 // @import './components/section-advantage';
 // @import './components/section-work';
