--- a/sass/components/_menu-mobile.scss
+++ b/sass/components/_menu-mobile.scss
@@ -95,7 +95,7 @@
   }
 }
 
-// tablet style
+// tablet / desktop style
 @media screen and (min-width: 768px) {
   .menu-container {
     display: none;
