--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -15,6 +15,7 @@
     pointer-events: none;
   }
 }
+// mobile style
 .modal {
   position: absolute;
   top: 50%;
@@ -23,8 +24,8 @@
 
   padding: 40px;
 
-  width: 528px;
-  height: 581px;
+  width: 450px;
+  height: 609px;
   background-color: $background-color-main;
   box-shadow: 0px 1px 3px $background-color-shadow-blok, 0px 1px 1px $background-color-shadow-blok1,
     0px 2px 1px $background-color-backdrop;
@@ -36,12 +37,11 @@
     color: $color-text-topic;
     font-weight: 700;
     font-size: 20px;
-    line-height: calc(23 / 20);
+    line-height: calc(30 / 20);
     text-align: center;
     letter-spacing: 0.03em;
   }
 }
-
 .form {
   margin-bottom: 20px;
 
@@ -66,7 +66,7 @@
   }
   &__input {
     padding: 11px 42px;
-    width: 448px;
+    width: 370px;
     height: 40px;
     outline: none;
 
@@ -93,7 +93,7 @@
   }
   &__textarea {
     padding: 12px 16px;
-    width: 448px;
+    width: 370px;
     height: 120px;
     resize: none;
     outline: none;
@@ -129,8 +129,8 @@
 
   &__text {
     color: $color-text-main;
-    font-size: 14px;
-    line-height: calc(24 / 14);
+    font-size: 12px;
+    line-height: calc(14 / 12);
     letter-spacing: 0.03em;
   }
   &__input--hidden {
@@ -154,8 +154,8 @@
   }
   &__link {
     color: $color-text-accent;
-    font-size: 14px;
-    line-height: calc(24 / 14);
+    font-size: 12px;
+    line-height: calc(14 / 12);
     letter-spacing: 0.03em;
     text-decoration-line: underline;
   }
@@ -164,4 +164,40 @@
   background-color: $background-color-bt-accent;
   background-origin: border-box;
   border-color: transparent;
+}
+
+//desktop style
+@media screen and (min-width: 1200px) {
+  .modal {
+    width: 528px;
+    height: 581px;
+    &__title {
+      margin-bottom: 12px;
+
+      line-height: calc(23 / 20);
+    }
+  }
+  .form {
+    &__input {
+      width: 448px;
+      height: 40px;
+    }
+    &__textarea {
+      width: 448px;
+      height: 120px;
+    }
+  }
+  .checkbox {
+    &__text {
+      font-size: 14px;
+      line-height: calc(24 / 14);
+    }
+
+    &__link {
+      font-size: 14px;
+      line-height: calc(24 / 14);
+      letter-spacing: 0.03em;
+      text-decoration-line: underline;
+    }
+  }
 }
