--- a/sass/main.scss
+++ b/sass/main.scss
@@ -7,13 +7,13 @@
 @import './components/menu-mobile'; //ok
 @import './components/logo'; //ok
 @import './components/page-header'; //ok
-// @import './components/page-footer';
+@import './components/page-footer'; //ok
 @import './components/nav'; //ok
-// @import './components/address';
+@import './components/address'; //ok
 @import './components/modal'; //ok
-// @import './components/section-hero';
-// @import './components/section-advantage';
-// @import './components/section-work';
+@import './components/section-hero'; //ok
+@import './components/section-advantage'; //ok
+@import './components/section-work'; //ok
 // @import './components/section-team';
 // @import './components/section-client';
 // @import './components/portfolio';
