--- a/sass/components/_section-work.scss
+++ b/sass/components/_section-work.scss
@@ -1,32 +1,35 @@
 .work {
   display: none;
 }
+// desktop style
+@media screen and (min-width: 1200px) {
+  .work {
+    display: flex;
+    padding-top: 0;
 
-// .work {
-//   padding-top: 0;
+    &__card {
+      position: relative;
+      width: 100%;
+      height: 100%;
+    }
+    &__label {
+      position: absolute;
+      bottom: 0;
+      left: 0;
+      width: 100%;
+      height: 70px;
 
-//   &__card {
-//     position: relative;
-//     width: 100%;
-//     height: 100%;
-//   }
-//   &__label {
-//     position: absolute;
-//     bottom: 0;
-//     left: 0;
-//     width: 100%;
-//     height: 70px;
+      padding-top: 27px;
+      padding-bottom: 27px;
 
-//     padding-top: 27px;
-//     padding-bottom: 27px;
+      background-color: $background-color-label;
+    }
+    &__text {
+      line-height: calc(16 / 14);
+      text-align: center;
+      text-transform: uppercase;
 
-//     background-color: $background-color-label;
-//   }
-//   &__text {
-//     line-height: calc(16 / 14);
-//     text-align: center;
-//     text-transform: uppercase;
-
-//     color: $color-text-hero;
-//   }
-// }
+      color: $color-text-hero;
+    }
+  }
+}
