--- a/sass/main.scss
+++ b/sass/main.scss
@@ -14,6 +14,6 @@
 @import './components/section-hero'; //ok
 @import './components/section-advantage'; //ok
 @import './components/section-work'; //ok
-// @import './components/section-team';
-// @import './components/section-client';
+@import './components/section-team';
+@import './components/section-client'; //ok
 // @import './components/portfolio';
