--- a/sass/components/_base.scss
+++ b/sass/components/_base.scss
@@ -31,6 +31,16 @@ img {
     text-align: center;
   }
 }
+.grid {
+  display: flex;
+  flex-wrap: wrap;
+  gap: 30px;
+  &__item--client {
+    width: 210px;
+    height: 92px;
+  }
+}
+
 // tablet stule
 @media screen and (min-width: 768px) {
   .container {
@@ -38,10 +48,6 @@ img {
   }
 
   .grid {
-    display: flex;
-    flex-wrap: wrap;
-    gap: 30px;
-
     &__item--advantage {
       width: 354px;
     }
@@ -52,7 +58,7 @@ img {
       width: 354px;
     }
     &__item--client {
-      width: 266px;
+      width: 226px;
       height: 92px;
     }
     &__item--project {
