--- a/sass/main.scss
+++ b/sass/main.scss
@@ -16,4 +16,4 @@
 @import './components/section-work'; //ok
 @import './components/section-team'; //ok
 @import './components/section-client'; //ok
-@import './components/portfolio';
+@import './components/portfolio'; //ok
