--- a/css/main.css
+++ b/css/main.css
@@ -1429,67 +1429,24 @@ img {
   .filter__item:last-child {
     margin-right: 0;
   }
-  .project__link {
-    display: block;
-    -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    text-decoration: none;
+  .project__container {
+    position: relative;
+    width: 354px;
+    height: 294px;
+    overflow: hidden;
   }
-  .project__link:hover, .project__link:focus {
-    -webkit-box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
-            box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06), 1px 4px 6px rgba(0, 0, 0, 0.16);
+  .overlay {
+    padding: 49px 24px;
   }
-  .project__link:hover .overlay,
-.project__link:focus .overlay {
-    -webkit-transform: translatey(0%);
-            transform: translatey(0%);
-  }
+}
+@media screen and (min-width: 1200px) {
   .project__container {
     position: relative;
     width: 370px;
     height: 294px;
     overflow: hidden;
   }
-  .project__box {
-    padding: 20px 24px;
-    border-left: 1px solid #eeeeee;
-    border-right: 1px solid #eeeeee;
-    border-bottom: 1px solid #eeeeee;
-  }
-  .project__name {
-    margin-bottom: 4px;
-    color: #212121;
-    font-weight: 700;
-    font-size: 18px;
-    line-height: 2;
-    letter-spacing: 0.06em;
-  }
-  .project__filter {
-    color: #757575;
-    font-size: 16px;
-    line-height: 1.875;
-  }
   .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-    -webkit-transform: translatey(100%);
-            transform: translatey(100%);
-    -webkit-transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1), -webkit-transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
     padding: 63px 24px;
-    background-color: rgba(33, 150, 243, 0.9);
-  }
-  .overlay__text {
-    font-size: 18px;
-    line-height: 1.5555555556;
-    letter-spacing: 0.03em;
-    color: #ffffff;
   }
 }/*# sourceMappingURL=main.css.map */
