--- a/sass/components/_portfolio.scss
+++ b/sass/components/_portfolio.scss
@@ -94,68 +94,28 @@
       }
     }
   }
-  .project__link {
-    display: block;
-
-    transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
-    text-decoration: none;
-
-    &:hover,
-    &:focus {
-      box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12), 0px 4px 4px rgba(0, 0, 0, 0.06),
-        1px 4px 6px rgba(0, 0, 0, 0.16);
+  .project {
+    &__container {
+      position: relative;
+      width: 354px;
+      height: 294px;
+      overflow: hidden;
     }
   }
-  .project__link:hover .overlay,
-  .project__link:focus .overlay {
-    transform: translatey(0%);
+  .overlay {
+    padding: 49px 24px;
   }
+}
+// desktop stule
+@media screen and (min-width: 1200px) {
   .project__container {
     position: relative;
     width: 370px;
     height: 294px;
     overflow: hidden;
   }
-  .project {
-    &__box {
-      padding: 20px 24px;
-      border-left: 1px solid $background-color-box;
-      border-right: 1px solid $background-color-box;
-      border-bottom: 1px solid $background-color-box;
-    }
-    &__name {
-      margin-bottom: 4px;
-      color: $color-text-topic;
-      font-weight: 700;
-      font-size: 18px;
-      line-height: calc(36 / 18);
-      letter-spacing: 0.06em;
-    }
-    &__filter {
-      color: $color-text-main;
-      font-size: 16px;
-      line-height: calc(30 / 16);
-    }
-  }
+
   .overlay {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 100%;
-
-    transform: translatey(100%);
-    transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
     padding: 63px 24px;
-    background-color: $background-color-overlay;
-
-    &__text {
-      font-size: 18px;
-      line-height: calc(28 / 18);
-      letter-spacing: 0.03em;
-      color: $color-text-hero;
-    }
   }
 }
