--- a/sass/main.scss
+++ b/sass/main.scss
@@ -1,19 +1,19 @@
-@import './utils/variables'; //ok
-@import './utils/reset'; //ok
-@import './utils/visually-hidden'; //ok
-@import './components/base'; //ok
-@import './components/button'; //ok
-@import './components/icon'; //ok
-@import './components/menu-mobile'; //ok
-@import './components/logo'; //ok
-@import './components/page-header'; //ok
-@import './components/page-footer'; //ok
-@import './components/nav'; //ok
-@import './components/address'; //ok
-@import './components/modal'; //ok
-@import './components/section-hero'; //ok
-@import './components/section-advantage'; //ok
-@import './components/section-work'; //ok
-@import './components/section-team'; //ok
-@import './components/section-client'; //ok
-@import './components/portfolio'; //ok
+@import './utils/variables';
+@import './utils/reset';
+@import './utils/visually-hidden';
+@import './components/base';
+@import './components/button';
+@import './components/icon';
+@import './components/menu-mobile';
+@import './components/logo';
+@import './components/page-header';
+@import './components/page-footer';
+@import './components/nav';
+@import './components/address';
+@import './components/modal';
+@import './components/section-hero';
+@import './components/section-advantage';
+@import './components/section-work';
+@import './components/section-team';
+@import './components/section-client';
+@import './components/portfolio';
