--- a/sass/components/_icon.scss
+++ b/sass/components/_icon.scss
@@ -25,6 +25,10 @@
   width: 11px;
   height: 11px;
 }
+.icon--close-menu {
+  width: 18px;
+  height: 18px;
+}
 .icon--advantage {
   width: 70px;
   height: 70px;
