--- a/sass/components/_section-team.scss
+++ b/sass/components/_section-team.scss
@@ -8,7 +8,7 @@
     border-radius: 0px 0px 4px 4px;
   }
   &__container {
-    padding: 30px 122px 24px 122px;
+    padding: 30px;
   }
   &__member {
     margin-bottom: 10px;
