--- a/css/main.css
+++ b/css/main.css
@@ -71,6 +71,9 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
   -ms-flex-wrap: wrap;
       flex-wrap: wrap;
   gap: 30px;
@@ -152,7 +155,8 @@ img {
   cursor: pointer;
 }
 .button--hero {
-  padding: 10px 24px;
+  width: 200px;
+  padding: 10px;
   margin-left: auto;
   margin-right: auto;
 }
@@ -279,7 +283,8 @@ img {
 }
 @media screen and (min-width: 1200px) {
   .button--hero {
-    padding: 10px 32px;
+    padding: 10px;
+    width: 200px;
   }
 }
 .icon--envelope {
@@ -311,6 +316,11 @@ img {
 .icon--close {
   width: 11px;
   height: 11px;
+}
+
+.icon--close-menu {
+  width: 18px;
+  height: 18px;
 }
 
 .icon--advantage {
@@ -390,12 +400,18 @@ img {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-align: stretch;
+      -ms-flex-align: stretch;
+          align-items: stretch;
 }
 .menu__item--social {
   border-right: 1px solid rgba(33, 33, 33, 0.2);
-}
-.menu__item--social:last-child {
-  border-right: none;
+  padding-bottom: 5px;
+  padding-top: 5px;
 }
 .menu__link--social {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -406,8 +422,6 @@ img {
   font-size: 18px;
   line-height: 1.2222222222;
   letter-spacing: 0.02em;
-  padding-right: 10px;
-  padding-left: 10px;
 }
 
 .menu__link {
@@ -416,8 +430,8 @@ img {
   text-decoration: none;
   color: #212121;
   font-weight: 500;
-  font-size: 40px;
-  line-height: 1.175;
+  font-size: 32px;
+  line-height: 1.25;
   letter-spacing: 0.02em;
 }
 .menu__link:hover, .menu__link:focus {
@@ -425,15 +439,15 @@ img {
 }
 .menu__link--contact {
   color: #2196f3;
-  font-size: 32px;
-  line-height: 1.25;
+  font-size: 24px;
+  line-height: 1.3333333333;
   letter-spacing: 0.02em;
 }
 .menu__link--contact-tel {
   color: #757575;
   font-weight: 500;
-  font-size: 24px;
-  line-height: 1.1666666667;
+  font-size: 20px;
+  line-height: 1.2;
   letter-spacing: 0.02em;
 }
 .menu__link--active {
@@ -441,6 +455,44 @@ img {
   padding-bottom: 0;
 }
 
+@media screen and (min-width: 480px) {
+  .menu--social {
+    margin-top: 64px;
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-box-orient: horizontal;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: row;
+            flex-direction: row;
+  }
+  .menu__item--social {
+    border-right: 1px solid rgba(33, 33, 33, 0.2);
+    padding-bottom: 0;
+    padding-top: 0;
+  }
+  .menu__item--social:last-child {
+    border-right: none;
+  }
+  .menu__link--social {
+    font-size: 18px;
+    line-height: 1.2222222222;
+    padding-right: 10px;
+    padding-left: 10px;
+  }
+  .menu__link {
+    font-size: 40px;
+    line-height: 1.175;
+  }
+  .menu__link--contact {
+    font-size: 32px;
+    line-height: 1.25;
+  }
+  .menu__link--contact-tel {
+    font-size: 24px;
+    line-height: 1.1666666667;
+  }
+}
 @media screen and (min-width: 768px) {
   .menu-container {
     display: none;
@@ -570,6 +622,9 @@ img {
       -ms-flex-align: center;
           align-items: center;
 }
+.form-ftr__label {
+  width: 100%;
+}
 .form-ftr__input {
   display: block;
   padding: 15px 16px;
@@ -577,7 +632,8 @@ img {
   -webkit-transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1), border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
   outline: none;
-  width: 450px;
+  max-width: 450px;
+  width: 100%;
   height: 50px;
   background-color: transparent;
   border: 1px solid rgba(255, 255, 255, 0.3);
@@ -589,31 +645,31 @@ img {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: var(--color-text-adress);
+  color: rgba(255, 255, 255, 0.6);
 }
 .form-ftr__input::-moz-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: var(--color-text-adress);
+  color: rgba(255, 255, 255, 0.6);
 }
 .form-ftr__input:-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: var(--color-text-adress);
+  color: rgba(255, 255, 255, 0.6);
 }
 .form-ftr__input::-ms-input-placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: var(--color-text-adress);
+  color: rgba(255, 255, 255, 0.6);
 }
 .form-ftr__input::placeholder {
   font-size: 16px;
   line-height: 1.25;
   letter-spacing: 0.03em;
-  color: var(--color-text-adress);
+  color: rgba(255, 255, 255, 0.6);
 }
 
 .form-ftr__label:focus-within > .form-ftr__input {
@@ -634,11 +690,16 @@ img {
     margin-bottom: 60px;
   }
   .footer__container--address {
-    margin: auto;
     margin-right: 165px;
   }
   .footer__container--social {
+    margin-top: 5px;
+  }
+  .form-ftr__input {
+    display: block;
+    padding: 15px 16px;
     margin: auto;
+    margin-bottom: 20px;
   }
 }
 @media screen and (min-width: 1200px) {
@@ -649,14 +710,21 @@ img {
     display: -webkit-box;
     display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: center;
-        -ms-flex-align: center;
-            align-items: center;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
     margin: auto;
   }
   .footer__container--address {
-    margin-right: 70px;
     width: 230px;
+    margin: 0;
+    margin-right: 70px;
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+  .footer__container--social {
+    margin-top: 12px;
   }
   .footer__container--box {
     display: -webkit-box;
@@ -678,6 +746,11 @@ img {
     -webkit-box-align: start;
         -ms-flex-align: start;
             align-items: flex-start;
+    margin: 0;
+    margin-top: 12px;
+  }
+  .footer__container--title {
+    text-align: left;
   }
   .form-ftr {
     display: -webkit-box;
@@ -856,6 +929,13 @@ img {
   color: #2196f3;
 }
 
+@media screen and (min-width: 1200px) {
+  .address__list {
+    -webkit-box-align: start;
+        -ms-flex-align: start;
+            align-items: flex-start;
+  }
+}
 .backdrop {
   background-color: rgba(0, 0, 0, 0.2);
   position: fixed;
@@ -882,8 +962,9 @@ img {
   -webkit-transform: translate(-50%, -50%);
           transform: translate(-50%, -50%);
   padding: 40px;
-  width: 450px;
-  height: 609px;
+  width: 100%;
+  max-width: 450px;
+  max-height: 609px;
   background-color: #ffffff;
   -webkit-box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
           box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14), 0px 2px 1px rgba(0, 0, 0, 0.2);
@@ -927,7 +1008,8 @@ img {
 }
 .form__input {
   padding: 11px 42px;
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   height: 40px;
   outline: none;
   -webkit-transition-property: color, border-color;
@@ -957,7 +1039,8 @@ img {
 }
 .form__textarea {
   padding: 12px 16px;
-  width: 370px;
+  max-width: 370px;
+  width: 100%;
   height: 120px;
   resize: none;
   outline: none;
@@ -1103,10 +1186,8 @@ img {
   padding-right: 60px;
 }
 .hero__title {
-  width: 360px;
+  max-width: 360px;
   margin-bottom: 30px;
-  margin-left: 0;
-  margin-right: 0;
   color: #ffffff;
   font-weight: 900;
   font-size: 26px;
@@ -1156,6 +1237,9 @@ img {
     width: 696px;
     font-size: 44px;
     line-height: 1.3636363636;
+    text-align: center;
+    letter-spacing: 0.06em;
+    text-transform: uppercase;
   }
 }
 @media (min-device-pixel-ratio: 2), (-webkit-min-device-pixel-ratio: 2), (min-resolution: 192dpi), (min-resolution: 2dppx) {
@@ -1245,7 +1329,7 @@ img {
   border-radius: 0px 0px 4px 4px;
 }
 .team__container {
-  padding: 30px 122px 24px 122px;
+  padding: 30px;
 }
 .team__member {
   margin-bottom: 10px;
@@ -1346,7 +1430,14 @@ img {
 }
 
 .project__link {
-  display: block;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  height: 100%;
   -webkit-transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: -webkit-box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
   transition: box-shadow 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -1376,6 +1467,9 @@ img {
   border-left: 1px solid #eeeeee;
   border-right: 1px solid #eeeeee;
   border-bottom: 1px solid #eeeeee;
+  -webkit-box-flex: 1;
+      -ms-flex-positive: 1;
+          flex-grow: 1;
 }
 .project__name {
   margin-bottom: 4px;
