--- a/sass/components/_menu-mobile.scss
+++ b/sass/components/_menu-mobile.scss
@@ -42,12 +42,13 @@
   &--social {
     margin-top: 64px;
     display: flex;
+    flex-direction: column;
+    align-items: stretch;
   }
   &__item--social {
     border-right: 1px solid $background-color-border-input;
-    &:last-child {
-      border-right: none;
-    }
+    padding-bottom: 5px;
+    padding-top: 5px;
   }
   &__link--social {
     transition: color 250ms cubic-bezier(0.4, 0, 0.2, 1);
@@ -58,8 +59,6 @@
     font-size: 18px;
     line-height: calc(22 / 18);
     letter-spacing: 0.02em;
-    padding-right: 10px;
-    padding-left: 10px;
   }
 }
 .menu__link {
@@ -68,8 +67,8 @@
   text-decoration: none;
   color: $color-text-topic;
   font-weight: 500;
-  font-size: 40px;
-  line-height: calc(47 / 40);
+  font-size: 32px;
+  line-height: calc(40 / 32);
   letter-spacing: 0.02em;
 
   &:hover,
@@ -78,20 +77,56 @@
   }
   &--contact {
     color: $color-text-accent;
-    font-size: 32px;
-    line-height: calc(40 / 32);
+    font-size: 24px;
+    line-height: calc(32 / 24);
     letter-spacing: 0.02em;
   }
   &--contact-tel {
     color: $color-text-main;
     font-weight: 500;
-    font-size: 24px;
-    line-height: calc(28 / 24);
+    font-size: 20px;
+    line-height: calc(24 / 20);
     letter-spacing: 0.02em;
   }
   &--active {
     color: $color-text-accent;
     padding-bottom: 0;
+  }
+}
+// mobile style
+@media screen and (min-width: 480px) {
+  .menu {
+    &--social {
+      margin-top: 64px;
+      display: flex;
+      flex-direction: row;
+    }
+    &__item--social {
+      border-right: 1px solid $background-color-border-input;
+      padding-bottom: 0;
+      padding-top: 0;
+      &:last-child {
+        border-right: none;
+      }
+    }
+    &__link--social {
+      font-size: 18px;
+      line-height: calc(22 / 18);
+      padding-right: 10px;
+      padding-left: 10px;
+    }
+  }
+  .menu__link {
+    font-size: 40px;
+    line-height: calc(47 / 40);
+    &--contact {
+      font-size: 32px;
+      line-height: calc(40 / 32);
+    }
+    &--contact-tel {
+      font-size: 24px;
+      line-height: calc(28 / 24);
+    }
   }
 }
 
