--- a/sass/components/_modal.scss
+++ b/sass/components/_modal.scss
@@ -23,9 +23,9 @@
   transform: translate(-50%, -50%);
 
   padding: 40px;
-
-  width: 450px;
-  height: 609px;
+  width: 100%;
+  max-width: 450px;
+  max-height: 609px;
   background-color: $background-color-main;
   box-shadow: 0px 1px 3px $background-color-shadow-blok, 0px 1px 1px $background-color-shadow-blok1,
     0px 2px 1px $background-color-backdrop;
@@ -66,7 +66,8 @@
   }
   &__input {
     padding: 11px 42px;
-    width: 370px;
+    max-width: 370px;
+    width: 100%;
     height: 40px;
     outline: none;
 
@@ -93,7 +94,8 @@
   }
   &__textarea {
     padding: 12px 16px;
-    width: 370px;
+    max-width: 370px;
+    width: 100%;
     height: 120px;
     resize: none;
     outline: none;
