--- a/sass/components/_page-footer.scss
+++ b/sass/components/_page-footer.scss
@@ -61,6 +61,10 @@
   flex-direction: column;
   align-items: center;
 
+  &__label {
+    width: 100%;
+  }
+
   &__input {
     display: block;
     padding: 15px 16px;
@@ -70,7 +74,8 @@
       border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
     outline: none;
-    width: 450px;
+    max-width: 450px;
+    width: 100%;
     height: 50px;
     background-color: transparent;
     border: 1px solid $background-color-border;
@@ -80,7 +85,7 @@
       font-size: 16px;
       line-height: calc(20 / 16);
       letter-spacing: 0.03em;
-      color: var(--color-text-adress);
+      color: $color-text-adress;
     }
   }
 }
@@ -96,14 +101,22 @@
     &__container--box {
       display: flex;
       flex-wrap: wrap;
+
       margin-bottom: 60px;
     }
     &__container--address {
-      margin: auto;
       margin-right: 165px;
     }
     &__container--social {
+      margin-top: 5px;
+    }
+  }
+  .form-ftr {
+    &__input {
+      display: block;
+      padding: 15px 16px;
       margin: auto;
+      margin-bottom: 20px;
     }
   }
 }
@@ -113,15 +126,21 @@
     padding: 60px 0;
     &__container {
       display: flex;
-      align-items: center;
+      align-items: flex-start;
       margin: auto;
     }
     &__container--address {
-      margin-right: 70px;
       width: 230px;
+      margin: 0;
+      margin-right: 70px;
+      align-items: flex-start;
+    }
+    &__container--social {
+      margin-top: 12px;
     }
     &__container--box {
       display: flex;
+
       margin: 0 93px 0 0;
     }
     &__container--form {
@@ -129,6 +148,11 @@
       flex-direction: column;
       justify-content: center;
       align-items: flex-start;
+      margin: 0;
+      margin-top: 12px;
+    }
+    &__container--title {
+      text-align: left;
     }
   }
 
